[package]
name = "launchpad"
version = "1.0.0"
authors = ["James Munns <james.munns@gmail.com>", "Cassaundra Smith <cass@cassaundra.io>"]
description = "Rust libraries for the Novation Launchpad, using PortMidi bindings"
license = "MIT"
homepage = "https://github.com/cassaundra/launch-rs"
repository = "https://github.com/cassaundra/launch-rs"
documentation = "https://docs.rs/launchpad"

[dependencies]
palette = "0.4.1"
portmidi = "0.2.4"