[package]
name = "launchpad"
version = "1.0.0"
authors = ["James Munns <james@onevariable.com>", "Cassaundra Smith <cass@cassaundra.io>"]
description = "Rust libraries for the Novation Launchpad, using PortMidi bindings"
license = "MIT"
homepage = "https://github.com/jamesmunns/launch-rs"
repository = "https://github.com/jamesmunns/launch-rs"
documentation = "https://docs.rs/launchpad"
edition = "2021"

[dependencies]
midir = "0.9.1"
palette = "0.6.1"

[features]
default = ["mk2"]
mk2 = []
