[package]
name = "launchpad"
version = "0.1.1"
authors = ["James Munns <james.munns@gmail.com>"]
description = "Rust libraries for the Novation Launchpad, using PortMidi bindings"
license = "MIT"
homepage = "https://github.com/jamesmunns/launch-rs"
repository = "https://github.com/jamesmunns/launch-rs"
documentation = "https://docs.rs/launchpad"

[dependencies]
portmidi = "0.2.4"
ref_slice = "1.1.1"
